--- a/Ubuntu20.04/qt_v4l2/widget/nkv_v4l2/widget.ui
+++ b/Ubuntu20.04/qt_v4l2/widget/nkv_v4l2/widget.ui
@@ -45,6 +45,7 @@
     <font>
      <pointsize>20</pointsize>
      <weight>75</weight>
+     <italic>true</italic>
      <bold>true</bold>
     </font>
    </property>
@@ -61,9 +62,9 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>1146</x>
+     <x>1130</x>
      <y>20</y>
-     <width>61</width>
+     <width>71</width>
      <height>30</height>
     </rect>
    </property>
@@ -71,6 +72,7 @@
     <font>
      <pointsize>20</pointsize>
      <weight>75</weight>
+     <italic>true</italic>
      <bold>true</bold>
     </font>
    </property>
